<resources>
    <string name="app_name">ANotifications</string>
    <string name="action_settings">Settings</string>

<!--notifications-->
    <string name="notification_delay_time_min">Match already started</string>
    <string name="notification_title">Match Reminder</string>
    <string name="notification_body">%1$s vs %2$s\nDate: %3$s </string>
    <string name="notification_time">%1$02d/%2$02d/%3$04d %4$02d:%5$02d</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--widgets-->
    <!--widget-->
    <string name="widget_empty_dash">-</string>
    <string name="widget_empty_long_dash">\u2014</string>
    <string name="widget_empty_time">- : -</string>

    <string name="widget_head_text">Click to choose match</string>
    <string name="widget_body_text">Ingredients List</string>
    <string name="widget_button">Tap to fill widget</string>
    <string name="widget_add">Add widget</string>
    <string name="widget_list_added">List of ingredients added to widget</string>

    <string name="widget_date">%1$3s, %2$02d %3$3s %4$04d</string>


    <!--messages-->
    <string name="widget_read_fixture_exception">Widget read fixture exception:%1$s</string>


    <!--descriptions-->
    <!--screen2-->
    <string name="image_rm_item_team_logo">The Football Team Logo image</string>
    <string name="text_rm_item_team_name">The Football Team Name</string>
    <!--<string name="image_rm_item_service_icon">The Football Match service icon</string>-->
    <!--<string name="text_rm_item_match_time">The Football Match time</string>-->
    <!--<string name="text_rm_item_league_name">The Football League Name</string>-->
    <!--<string name="image_rm_item_league_logo">The Football League Logo image</string>-->


    <!--screen4-->
    <!--match-->
    <string name="text_sm_item_match_country">The Name of Country</string>
    <string name="text_sm_item_match_league">The Name of League</string>
    <string name="text_sm_item_match_score_home">The Score of Home Team</string>
    <string name="text_sm_item_match_score_away">The Score of Away Team</string>
    <string name="text_sm_item_match_status">The Match Status</string>
    <string name="text_sm_item_match_icon_notification">Notification Icon</string>
    <string name="text_sm_item_match_icon_notification_back">Notification Icon Circle</string>
    <string name="text_sm_item_match_icon_favorite">Favorites Icon</string>
    <string name="text_sm_item_match_icon_favorite_back">Favorite Icon Circle</string>

    <string name="text_sm_item_match_date">The Match Date</string>
    <string name="text_sm_item_match_time">The Match Time</string>
    <!--<string name="text_sm_item_match_starts_in">The Match Starts In</string>-->

    <!--<string name="text_sm_item_match_date_days">The Match Date Days</string>-->
    <!--<string name="text_sm_item_match_date_hours">The Match Date Hours</string>-->
    <!--<string name="text_sm_item_match_date_mins">The Match Date Minutes</string>-->

    <!--<string name="text_sm_item_match_day_subscript">The Match Date Day Subscript</string>-->
    <!--<string name="text_sm_item_match_hour_subscript">The Match Date Hour Subscript</string>-->
    <!--<string name="text_sm_item_match_min_subscript">The Match Date Minute Subscript</string>-->



    <!--test-->
    <string name="text_test_rm_item_team_home">Eintracht</string>
    <string name="text_test_rm_item_team_away">Manchester United Junior League FC</string>
    <string name="text_test_rm_item_match_time">19:05</string>
    <!--<string name="text_test_rm_item_match_date">20/01/18</string>-->
    <!--<string name="text_test_rm_item_league_code">FAC</string>-->
    <string name="text_test_rm_item_league">Premier League 2017/18</string>
    <!--<string name="text_test_rm_item_league2">Champions League 2017/18</string>-->
    <!--<string name="text_test_rm_item_league3">League One 2017/18</string>-->
    <!--<string name="text_test_rm_item_league4">League Two 2017/18</string>-->
    <!--<string name="text_test_rm_item_favorites">Favorite matches</string>-->

    <!--<string name="text_test_calendar_line1">2017</string>-->
    <!--<string name="text_test_calendar_line2">Thu, Apr 3</string>-->


    <string name="text_test_sm_item_match_country">England</string>
    <string name="text_test_sm_item_match_number_1">1</string>
    <string name="text_test_sm_item_match_number_0">0</string>

    <!--<string name="text_test_sm_item_match_number_1_9">1.9</string>-->
    <!--<string name="text_test_sm_item_match_number_3_5">3.5</string>-->
    <!--<string name="text_test_sm_item_match_number_4_0">4.0</string>-->

    <!--<string name="text_test_sm_item_match_finished">FINISHED</string>-->
    <!--<string name="text_test_sm_item_match_timed">TIMED</string>-->
    <!--<string name="text_test_sm_item_match_cancelled">CANCELLED</string>-->
    <string name="text_test_sm_item_match_scheduled">SCHEDULED</string>

    <string name="text_test_sm_item_match_date">Sat, 20 Jan 2018</string>
    <!--<string name="text_test_sm_item_match_date_time">20 Jan 2018 19:05</string>-->
    <!--<string name="text_test_sm_match_recycler_date">20 Jan 2018</string>-->
    <!--<string name="text_test_sm_match_recycler_score">1 : 0</string>-->

</resources>
