<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_recycler_match_item"
    android:layout_width="220dp"
    android:layout_height="160dp"
    android:background="@drawable/widget_back"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_normal"
    android:paddingStart="@dimen/margin_normal">


    <TextView
        android:id="@+id/text_sm_item_league"
        style="@style/League.Match.Widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/text_sm_item_match_league"
        android:focusable="true"
        android:text="@string/text_test_rm_item_league" />

    <LinearLayout
        android:id="@+id/widget_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        android:baselineAligned="false">


        <LinearLayout
            android:id="@+id/widget_linear_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_normal">
            <ImageView
                android:id="@+id/image_sm_team_home"
                android:layout_width="@dimen/widget_image_team_size"
                android:layout_height="@dimen/widget_image_team_size"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/image_rm_item_team_logo"
                android:src="@drawable/logo_chelsea" />

            <TextView
                android:id="@+id/text_sm_team_home"
                style="@style/Team.Match.Widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:contentDescription="@string/text_rm_item_team_name"
                android:text="@string/text_test_rm_item_team_home" />

            <ImageView
                android:id="@+id/match_notification"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/text_sm_item_match_icon_favorite"
                android:focusable="true"
                android:src="@drawable/ic_notifications_none_white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/widget_linear_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.35"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/text_sm_item_time"
                style="@style/Time.Match.Widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:contentDescription="@string/text_sm_item_match_time"
                android:text="@string/text_test_rm_item_match_time"
                />
            <TextView
                android:id="@+id/text_sm_item_date"
                style="@style/Match.Widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/text_sm_item_match_date"
                android:text="@string/text_test_sm_item_match_date" />

            <LinearLayout
                android:id="@+id/widget_linear_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                >

                <TextView
                    android:id="@+id/text_sm_item_score_home"
                    style="@style/Score.Match.Widget"
                    android:layout_width="@dimen/widget_image_score_size"
                    android:layout_height="@dimen/widget_image_score_size"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:background="@drawable/match_score_red"
                    android:contentDescription="@string/text_sm_item_match_score_home"
                    android:text="@string/text_test_sm_item_match_number_1"
                    />

                <TextView
                    android:id="@+id/text_sm_item_score_away"
                    style="@style/Score.Match.Widget"
                    android:layout_width="@dimen/widget_image_score_size"
                    android:layout_height="@dimen/widget_image_score_size"
                    android:layout_marginStart="@dimen/margin_small"
                    android:background="@drawable/match_score_blue"
                    android:contentDescription="@string/text_sm_item_match_score_away"
                    android:text="@string/text_test_sm_item_match_number_0"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/text_sm_item_status"
                style="@style/Match.Light.Widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/match_status_back"
                android:contentDescription="@string/text_sm_item_match_status"
                android:minEms="@integer/text_sm_item_status_min"
                android:paddingBottom="@dimen/margin_small"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/text_test_sm_item_match_scheduled"
                android:layout_marginTop="@dimen/margin_small"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_linear_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_normal">

            <ImageView
                android:id="@+id/image_sm_team_away"
                android:layout_width="@dimen/widget_image_team_size"
                android:layout_height="@dimen/widget_image_team_size"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/image_rm_item_team_logo"
                android:src="@drawable/logo_stoke_city" />


            <TextView
                android:id="@+id/text_sm_team_away"
                style="@style/Team.Match.Widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_normal"
                android:contentDescription="@string/text_rm_item_team_name"
                android:text="@string/text_test_rm_item_team_away" />


            <ImageView
                android:id="@+id/match_refresh"
                android:layout_width="@dimen/widget_icon_size"
                android:layout_height="@dimen/widget_icon_size"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/text_sm_item_match_icon_notification"
                android:focusable="true"
                android:src="@drawable/ic_refresh_white" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
